feat(用户权限): 完成分配角色闭环 (F053)